--- a/src/Lucene.Net.Tests/Lucene.Net.Tests.csproj
+++ b/src/Lucene.Net.Tests/Lucene.Net.Tests.csproj
@@ -543,6 +543,7 @@
     <Compile Include="core\Util\TestNumericUtils.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="core\Util\TestOfflineSorter.cs" />
     <Compile Include="core\Util\TestOpenBitSet.cs">
       <SubType>Code</SubType>
     </Compile>
