--- a/src/Lucene.Net.Tests.Analysis.Common/Lucene.Net.Tests.Analysis.Common.csproj
+++ b/src/Lucene.Net.Tests.Analysis.Common/Lucene.Net.Tests.Analysis.Common.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Analysis\Compound\TestCompoundWordTokenFilter.cs" />
     <Compile Include="Analysis\Compound\TestDictionaryCompoundWordTokenFilterFactory.cs" />
     <Compile Include="Analysis\Compound\TestHyphenationCompoundWordTokenFilterFactory.cs" />
+    <Compile Include="Analysis\Core\TestAllAnalyzersHaveFactories.cs" />
     <Compile Include="Analysis\Core\TestAnalyzers.cs" />
     <Compile Include="Analysis\Core\TestBugInSomething.cs" />
     <Compile Include="Analysis\Core\TestClassicAnalyzer.cs" />
