--- a/src/Lucene.Net.Misc/Lucene.Net.Misc.csproj
+++ b/src/Lucene.Net.Misc/Lucene.Net.Misc.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Document\LazyDocument.cs" />
     <Compile Include="Index\CompoundFileExtractor.cs" />
     <Compile Include="Index\IndexSplitter.cs" />
     <Compile Include="Index\MultiPassIndexSplitter.cs" />
