--- a/src/Lucene.Net.Tests.Misc/Lucene.Net.Tests.Misc.csproj
+++ b/src/Lucene.Net.Tests.Misc/Lucene.Net.Tests.Misc.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Index\TestIndexSplitter.cs" />
     <Compile Include="Index\TestMultiPassIndexSplitter.cs" />
     <Compile Include="Index\TestPKIndexSplitter.cs" />
+    <Compile Include="Misc\SweetSpotSimilarityTest.cs" />
+    <Compile Include="Misc\TestHighFreqTerms.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
