--- a/src/Lucene.Net.Misc/Lucene.Net.Misc.csproj
+++ b/src/Lucene.Net.Misc/Lucene.Net.Misc.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Misc\SweetSpotSimilarity.cs" />
     <Compile Include="Misc\TermStats.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\Fst\ListOfOutputs.cs" />
+    <Compile Include="Util\Fst\UpToTwoPositiveIntOutputs.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lucene.Net.Analysis.Common\Lucene.Net.Analysis.Common.csproj">
