--- a/src/Lucene.Net.Tests/Lucene.Net.Tests.csproj
+++ b/src/Lucene.Net.Tests/Lucene.Net.Tests.csproj
@@ -461,6 +461,7 @@
     <Compile Include="core\Util\Fst\Test2BFST.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="core\Util\Fst\TestBytesStore.cs" />
     <Compile Include="core\Util\Packed\TestEliasFanoDocIdSet.cs">
       <SubType>Code</SubType>
     </Compile>
