--- a/src/Lucene.Net.Tests/Lucene.Net.Tests.csproj
+++ b/src/Lucene.Net.Tests/Lucene.Net.Tests.csproj
@@ -469,6 +469,7 @@
     <Compile Include="core\Util\Packed\TestEliasFanoSequence.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="core\Util\Packed\TestPackedInts.cs" />
     <Compile Include="core\Util\Test2BPagedBytes.cs">
       <SubType>Code</SubType>
     </Compile>
