--- a/src/Lucene.Net.Tests/Lucene.Net.Tests.csproj
+++ b/src/Lucene.Net.Tests/Lucene.Net.Tests.csproj
@@ -470,6 +470,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="core\Util\Packed\TestPackedInts.cs" />
+    <Compile Include="core\Util\StressRamUsageEstimator.cs" />
     <Compile Include="core\Util\Test2BPagedBytes.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -562,6 +563,7 @@
     <Compile Include="core\Util\TestQueryBuilder.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="core\Util\TestRamUsageEstimator.cs" />
     <Compile Include="core\Util\TestRamUsageEstimatorOnWildAnimals.cs">
       <SubType>Code</SubType>
     </Compile>
