--- a/src/Lucene.Net.Tests/Lucene.Net.Tests.csproj
+++ b/src/Lucene.Net.Tests/Lucene.Net.Tests.csproj
@@ -520,6 +520,7 @@
     <Compile Include="core\Util\TestFixedBitSet.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="core\Util\TestIdentityHashSet.cs" />
     <Compile Include="core\Util\TestIndexableBinaryStringTools.cs">
       <SubType>Code</SubType>
     </Compile>
