--- a/src/Lucene.Net.Tests/Lucene.Net.Tests.csproj
+++ b/src/Lucene.Net.Tests/Lucene.Net.Tests.csproj
@@ -428,6 +428,7 @@
     <Compile Include="core\TestAssertions.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="core\TestDemo.cs" />
     <Compile Include="core\TestMergeSchedulerExternal.cs">
       <SubType>Code</SubType>
     </Compile>
