Updated Lucene.Net.Misc documentation

--- a/src/Lucene.Net.Misc/Lucene.Net.Misc.csproj
+++ b/src/Lucene.Net.Misc/Lucene.Net.Misc.csproj
@@ -71,6 +71,14 @@
       <Name>Lucene.Net</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Misc\doc-files\ss.baselineTf.svg" />
+    <None Include="Misc\doc-files\ss.computeLengthNorm.svg" />
+    <None Include="Misc\doc-files\ss.hyperbolicTf.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Misc\doc-files\ss.gnuplot" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
